<resources>
    <string name="app_name">Filmatory</string>
    <string name="fname">Firstname</string>
    <string name="lname">Lastname</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="submit_btn">Register</string>
    <string name="cancel_btn">Cancel</string>
    <string name="more">More</string>
    <string name="search">Search</string>
    <string name="favorite">Favorite</string>
    <string name="content_description_favorite">Favorite description</string>
    <string name="content_description_search">Search description</string>
    <string name="content_description_more">More description</string>
    <string name="page_title">Filmatory</string>
    <string name="my_files">My Files</string>
    <string name="shared">Shared</string>
    <string name="openNavDrawer">Open</string>
    <string name="closeNavDrawer">Close</string>
    <string name="discoverMovies">Discover Movies</string>
    <string name="discoverTvs">Discover Tv-Shows</string>
    <string name="recMovies">Recommended Movies</string>
    <string name="recTvs">Recommended Tv-Shows</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="registerHer">Register here!</string>
    <string name="acc_info">Account</string>
    <string name="favorites">Favorites</string>
    <string name="watchlist">Watchlist</string>
    <string name="mylists">My Lists</string>
    <string name="p_status">Status</string>
    <string name="p_name">Name</string>
    <string name="p_gender">Gender</string>
    <string name="p_birthplace">Birthplace</string>
    <string name="p_d_birthplace">Birthplace here</string>
    <string name="p_d_status">Status her</string>
    <string name="p_d_gender">Gender here</string>
    <string name="p_showMore">Show more</string>
    <string name="p_showLess">Show less</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla vel iaculis massa. Nulla tincidunt purus leo, ultrices egestas sem aliquet mattis. Sed sed ornare mi. Maecenas congue semper quam in commodo. Praesent ac egestas quam. Donec tempor nisl et sapien lacinia tristique. Sed vel ipsum dolor. Nunc mollis purus orci, et tincidunt nisi finibus in. Vestibulum dignissim quam sit amet nibh posuere consequat. In accumsan dui facilisis lectus euismod facilisis. Cras et efficitur sem. Quisque at pharetra enim. Cras vel facilisis nunc. Suspendisse elementum nulla vel metus luctus tincidunt. Aliquam eleifend nisi non risus maximus feugiat. In a suscipit leo.</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nav_home">Home</string>
    <string name="nav_movies">Movies</string>
    <string name="nav_tv">Tv-Shows</string>
    <string name="nav_upcoming_movies">Upcoming Movies</string>
    <string name="nav_upcoming_tv">Upcoming Tv-Shows</string>
    <string name="nav_lists">Lists</string>
    <string name="logout">Logout</string>
    <string name="nav_myaccount">My Account</string>
    <string name="choose_lang">Choose Language</string>
    <string name="list_name">Listname</string>
    <string name="list_author">Author</string>
    <string name="list_total_movies">Movies</string>
    <string name="list_total_tv">Tv-Shows</string>
    <string name="new_password">New Password</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="change_password">Change Password</string>
    <string name="change_username">Change Username</string>
    <string name="username">Username</string>
    <string name="confirm_btn">Confirm</string>
    <string name="forgotPassword">Forgotten password?</string>
    <string name="recover">Recover</string>
    <string name="recover_password_info">To reset your password, enter your email address and check your inbox.</string>
    <string name="accinfo_mediamenu">Media Menu</string>
    <string name="statistics">Statistics</string>
    <string name="mediatype">Media Type</string>
    <string name="favoriteandwatchlist">Favorites and Watchlist</string>
    <string name="delete_list">Delete List</string>
    <string name="start_scene_title">Join Filmatory Today!</string>
    <string name="start_scene_text">With a membership you will be able to rate movies and make your own lists. Signing up is easy, free and fun.</string>
    <string name="start_scene_social">\u2022 Social</string>
    <string name="start_scene_free">\u2022 Free</string>
    <string name="start_scene_secure">\u2022 Secure</string>
    <string name="header_text">Millions of movies, TV shows and people to discover. Explore now.</string>
    <string name="reviews_heading">Reviews</string>
    <string name="all">All</string>
    <string name="movies">Movies</string>
    <string name="tvs">Tvs</string>
    <string name="create_review">Create Review</string>
    <string name="rating">Rating</string>
    <string name="your_review">Your Review</string>
    <string name="back_btn">Back</string>
    <string name="filter">Filter</string>
    <string name="filter_genre">Filter Genre</string>
    <string name="close_btn">Close</string>
    <string name="favorite_tvs">Favorite Tv-shows</string>
    <string name="favorite_movies">Favorite Movies</string>
    <string name="watchlist_tvs">Watchlist Tv-shows</string>
    <string name="watchlist_movies">Watchlist Movies</string>
    <string name="add_to_list">Add to list</string>
    <string name="new_review">New Review</string>
    <string name="list_name_to_short">Your listname is too short.</string>
    <string name="username_too_short">Your username is too short.</string>
    <string name="no_more_tv">No more tv-shows to load</string>
    <string name="no_more_movies">No more movies to load</string>
    <string-array name="media_array">
        <item>All</item>
        <item>Movie</item>
        <item>TV</item>
    </string-array>
    <string-array name="filter_array">
        <item>Popularity Descending</item>
        <item>Popularity Ascending</item>
        <item>Release Date Descending</item>
        <item>Release Date Ascending</item>
        <item>Title (A-Z)</item>
        <item>Title (Z-A)</item>
    </string-array>
    <string-array name="rating_array">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>
    <string-array name="filter_genre_movie_array">
        <item>Action</item>
        <item>Adventure</item>
        <item>Animation</item>
        <item>Comedy</item>
        <item>Crime</item>
        <item>Documentary</item>
        <item>Drama</item>
        <item>Family</item>
        <item>Fantasy</item>
        <item>History</item>
        <item>Horror</item>
        <item>Music</item>
        <item>Mystery</item>
        <item>Romance</item>
        <item>Sci-fi</item>
        <item>TV Movie</item>
        <item>Thriller</item>
        <item>War</item>
        <item>Western</item>
    </string-array>
    <string-array name="filter_genre_tv_array">
        <item>Action &amp; Adventure</item>
        <item>Animation</item>
        <item>Comedy</item>
        <item>Crime</item>
        <item>Documentary</item>
        <item>Drama</item>
        <item>Family</item>
        <item>Kids</item>
        <item>News</item>
        <item>Reality</item>
        <item>Sci-fi &amp; Fantasy</item>
        <item>Soap</item>
        <item>Talk</item>
        <item>War &amp; Politics</item>
        <item>Western</item>
    </string-array>
</resources>