<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:title="@string/nav_home"
            android:icon="@drawable/home_icon">
        </item>
        <item
            android:id="@+id/nav_movies"
            android:title="@string/nav_movies"
            android:icon="@drawable/movie_icon">
        </item>
        <item
            android:id="@+id/nav_series"
            android:title="@string/nav_tv"
            android:icon="@drawable/tvshow_icon">
        </item>
        <item
            android:id="@+id/nav_upcoming_movies"
            android:title="@string/nav_upcoming_movies"
            android:icon="@drawable/movie_icon">
        </item>
        <item
            android:id="@+id/nav_upcoming_tvshows"
            android:title="@string/nav_upcoming_tv"
            android:icon="@drawable/tvshow_icon">
        </item>
        <item
            android:id="@+id/nav_lists"
            android:title="@string/nav_lists"
            android:icon="@drawable/list_icon">
        </item>
    </group>

    <group android:checkableBehavior="single">
        <item
            android:title="@string/acc_info">
            <menu>
                <item
                    android:id="@+id/nav_user_profile"
                    android:title="@string/nav_myaccount"
                    android:icon="@drawable/account_icon">
                </item>
                <item
                    android:id="@+id/nav_user_favorites"
                    android:title="@string/favorites"
                    android:icon="@drawable/favorite_icon">
                </item>
                <item
                    android:id="@+id/nav_user_watchlist"
                    android:title="@string/watchlist"
                    android:icon="@drawable/bookmark_icon">
                </item>
                <item
                    android:id="@+id/nav_user_my_lists"
                    android:title="@string/mylists"
                    android:icon="@drawable/list_icon">
                </item>
                <item
                    android:id="@+id/nav_user_logout"
                    android:title="@string/logout"
                    android:icon="@drawable/logout_icon">
                </item>
            </menu>
        </item>
    </group>
</menu>