<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:title="@string/nav_home"
            android:icon="@drawable/home_icon">
        </item>
        <item
            android:id="@+id/nav_movies"
            android:title="@string/nav_movies"
            android:icon="@drawable/movie_icon">
        </item>
        <item
            android:id="@+id/nav_series"
            android:title="@string/nav_tv"
            android:icon="@drawable/tvshow_icon">
        </item>
        <item
            android:id="@+id/nav_upcoming_movies"
            android:title="@string/nav_upcoming_movies"
            android:icon="@drawable/movie_icon">
        </item>
        <item
            android:id="@+id/nav_upcoming_tvshows"
            android:title="@string/nav_upcoming_tv"
            android:icon="@drawable/tvshow_icon">
        </item>
        <item
            android:id="@+id/nav_lists"
            android:title="@string/nav_lists"
            android:icon="@drawable/list_icon">
        </item>
    </group>

    <group android:checkableBehavior="single">
        <item
            android:title="@string/acc_info">
            <menu>
                <item
                    android:id="@+id/nav_user_login"
                    android:title="@string/login"
                    android:icon="@drawable/login_icon">
                </item>

            </menu>
        </item>
    </group>
</menu>