<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/movie_imgView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/login_scene_background"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/overlay_75per"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_centerHorizontal="true">
        <Button
            android:id="@+id/allFavoritesBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:text="@string/all"/>
        <Button
            android:id="@+id/movieFavoritesBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:text="@string/movies"/>
        <Button
            android:id="@+id/tvFavoritesBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvs"/>
    </LinearLayout>
    <androidx.recyclerview.widget.RecyclerView
        android:layout_marginTop="80dp"
        android:layout_marginStart="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/favorite_rv" />
</RelativeLayout>