<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/drawer_layout"
    tools:context=".scenes.activities.PersonScene">

    <ImageView
        android:id="@+id/actor_imgView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/movie_scene_background"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/movie_overlay_color">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:gravity="top">

            <ImageView
                android:id="@+id/person_img"
                android:layout_width="220dp"
                android:layout_height="350dp"
                android:layout_below="@+id/person_name"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="15dp"
                android:background="#2d2d2d" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/gradient_background"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true"/>

            <TextView
                android:id="@+id/person_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="70dp"
                android:gravity="center"
                android:text="@string/p_name"
                android:textAppearance="?attr/textAppearanceHeadline6"
                android:textColor="@color/white" />

            <LinearLayout
                android:id="@+id/person_status_gender_hor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/person_data_birthplace"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/person_status_gender_ver_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/person_data_birthplace"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:gravity="center">

                    <TextView
                        android:id="@+id/person_status"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:gravity="center"
                        android:text="@string/p_status"
                        android:textAppearance="?attr/textAppearanceBody2"
                        android:textColor="@color/white" />

                    <TextView
                        android:id="@+id/person_data_status"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/person_status"
                        android:layout_alignParentEnd="true"
                        android:gravity="center"
                        android:text="@string/p_d_status" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/person_status_gender_ver_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/person_data_birthplace"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:gravity="center">

                    <TextView
                        android:id="@+id/person_gender"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/person_data_birthplace"
                        android:layout_alignParentStart="true"
                        android:layout_marginTop="5dp"
                        android:gravity="center"
                        android:text="@string/p_gender"
                        android:textAppearance="?attr/textAppearanceBody2"
                        android:textColor="@color/white" />

                    <TextView
                        android:id="@+id/person_data_gender"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/person_gender"
                        android:layout_alignParentStart="true"
                        android:gravity="center"
                        android:text="@string/p_d_gender" />

                </LinearLayout>

            </LinearLayout>

            <TextView
                android:id="@+id/person_data_birthplace"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/person_birthplace"
                android:layout_alignParentEnd="true"
                android:layout_centerHorizontal="true"
                android:text="@string/p_d_birthplace" />

            <TextView
                android:id="@+id/person_birthplace"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/person_img"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="5dp"
                android:text="@string/p_birthplace"
                android:textAppearance="?attr/textAppearanceBody2"
                android:textColor="@color/white" />


            <TextView
                android:id="@+id/person_biography"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/person_status_gender_hor"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/lorem"
                android:textAppearance="?attr/textAppearanceBody2"
                android:textColor="@color/white" />
            <LinearLayout
                android:id="@+id/person_button_wrapper"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/person_biography"
                android:layout_centerHorizontal="true">
                <Button
                    android:layout_marginTop="10dp"
                    android:id="@+id/person_readmore"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/p_showMore" />
                <Button
                    android:layout_marginTop="10dp"
                    android:id="@+id/person_readless"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/p_showLess"
                    android:visibility="gone" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/person_button_wrapper"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center"
                android:orientation="horizontal">


                <ImageView
                    android:id="@+id/person_imdbLogo"
                    android:layout_width="70dp"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:scaleType="centerCrop"
                    android:src="@drawable/imdblogo"
                    android:layout_marginEnd="15dp"
                    android:visibility="gone"/>

                <ImageView
                    android:id="@+id/person_tmdb_logo"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:scaleType="centerCrop"
                    android:src="@drawable/tmdblogo"
                    android:layout_marginEnd="15dp"
                    android:visibility="gone"/>

                <ImageView
                    android:id="@+id/person_facebook_logo"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:scaleType="centerCrop"
                    android:src="@drawable/facebooklogo"
                    android:layout_marginEnd="15dp"
                    android:visibility="gone"/>

                <ImageView
                    android:id="@+id/person_twitter_logo"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:scaleType="centerCrop"
                    android:src="@drawable/twitterlogo"
                    android:layout_marginEnd="15dp"
                    android:visibility="gone"/>

                <ImageView
                    android:id="@+id/person_instagram_logo"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:scaleType="centerCrop"
                    android:src="@drawable/instagramlogo"
                    android:visibility="gone"/>
            </LinearLayout>

        </RelativeLayout>

    </ScrollView>



    <include layout="@layout/toolbar" />

    <include layout="@layout/nav_drawer" />




</androidx.drawerlayout.widget.DrawerLayout>