<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ImageView
        android:id="@+id/movie_imgView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/register_scene_background"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/overlay_75per"/>

    <TextView
        android:id="@+id/accinfo_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/acc_info"
        android:fontFamily="@font/roboto"
        android:textSize="24sp"
        android:textColor="@color/white"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"/>

    <View
        android:layout_below="@+id/accinfo_title"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="30dp"
        android:background="@color/white"/>
    <RelativeLayout
        android:id="@+id/accinfo_password_wrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/accinfo_title"
        android:layout_centerHorizontal="true">

        <TextView
            android:id="@+id/accinfo_changepassword_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/change_password"
            android:fontFamily="@font/roboto"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"/>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/accinfo_changepassword"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/accinfo_changepassword_title"
            android:layout_marginTop="30dp"
            android:background="@color/input_bg_color"
            android:hint="@string/new_password"
            android:layout_centerHorizontal="true"
            android:textColorHint="@color/white"
            app:endIconMode="password_toggle"
            app:hintTextColor="@color/white">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/accinfoPassEditTextField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textColor="@color/white" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/accinfo_changepasswordrepeat"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_centerHorizontal="true"
            android:background="@color/input_bg_color"
            android:hint="@string/repeat_password"
            android:textColorHint="@color/white"
            app:hintTextColor="@color/white"
            app:endIconMode="password_toggle"
            android:layout_below="@+id/accinfo_changepassword">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/accinfoRepeatPassEditTextField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textColor="@color/white"
                android:textColorHighlight="#FFFFFF" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/accinfo_password_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirm_btn"
            android:layout_marginTop="30dp"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/accinfo_changepasswordrepeat"
            style="@style/Widget.MaterialComponents.Button" />
    </RelativeLayout>

    <View
        android:id="@+id/accinfo_divider2"
        android:layout_below="@+id/accinfo_password_wrapper"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="30dp"
        android:background="@color/white"/>

    <RelativeLayout
        android:id="@+id/accinfo_username_wrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/accinfo_divider2">

        <TextView
            android:id="@+id/accinfo_username_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/change_username"
            android:fontFamily="@font/roboto"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"/>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/accinfo_changeusername"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/accinfo_username_title"
            android:layout_marginTop="30dp"
            android:background="@color/input_bg_color"
            android:hint="@string/username"
            android:layout_centerHorizontal="true"
            android:textColorHint="@color/white"
            app:hintTextColor="@color/white">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/accinfoUsernameTextField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:textColor="@color/white" />
        </com.google.android.material.textfield.TextInputLayout>
        <Button
            android:id="@+id/accinfo_username_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirm_btn"
            android:layout_marginTop="30dp"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/accinfo_changeusername"
            style="@style/Widget.MaterialComponents.Button" />
    </RelativeLayout>
    <View
        android:id="@+id/accinfo_divider3"
        android:layout_below="@+id/accinfo_username_wrapper"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="30dp"
        android:background="@color/white"/>
</RelativeLayout>